fix(css): wrong padding for blockquotes

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -856,7 +856,7 @@ article {
     }
 
     > p {
-      padding-left: var(--gutter);
+      padding-left: calc(var(--gutter) - var(--border-md));
       border-left: var(--border-md) solid var(--link-color);
 
       // TODO: Need better solution
